# pack-test

./: .gitignore  PKGBUILD  README.md  pyproject.toml
.github/workflows/: test-linux.yml  test-macos.yml  test-win.yml
src/pack_test/: __init__.py  cli.py  fixtures.py  github.py  pack.py
